--- a/manifest.json
+++ b/manifest.json
@@ -7,6 +7,12 @@
 
   "browser_action": {
     "default_icon": "icon.png",
+	"default_title": "Easy URL Params",
     "default_popup": "main.html"
-  }
+  },
+
+  "permissions": [
+    "tabs"
+  ]
+
 }
