--- a/extension/manifest.json
+++ b/extension/manifest.json
@@ -6,7 +6,7 @@
   "version": "1.0",
 
   "browser_action": {
-    "default_icon": "icon.png",
+    "default_icon": "style/icon.png",
 	"default_title": "Easy URL Params",
     "default_popup": "main.html"
   },
