--- a/extension/manifest.json
+++ b/extension/manifest.json
@@ -2,7 +2,7 @@
   "manifest_version": 2,
 
   "name": "Easy URL Params",
-  "description": "Easy URL Params is an extension for Chrome to manipulate and play with the query parameters in URL",
+  "description": "Easy URL Params is an extension for Chrome to manipulate and visualize the query parameters in URL",
   "version": "1.0",
 
   "browser_action": {
