--- a/extension/manifest.json
+++ b/extension/manifest.json
@@ -5,14 +5,14 @@
   "description": "Easy URL Params is an extension for Chrome to manipulate and visualize the query parameters in URL",
   "version": "1.3.1",
   "icons": {
-	"16": "icon/icon16.png",
-	"48": "icon/icon48.png",
-	"128": "icon/icon128.png"
+	"16": "img/icon/icon16.png",
+	"48": "img/icon/icon48.png",
+	"128": "img/icon/icon128.png"
   },
   "browser_action": {
     "default_icon": {
-		"19": "icon/icon19.png",
-		"38": "icon/icon38.png"
+		"19": "img/icon/icon19.png",
+		"38": "img/icon/icon38.png"
 	},
 	"default_title": "Easy URL Params",
     "default_popup": "main.html"
